added documentation for GET method at /api/shuttles/{date} endpoint
