# docs/openapi.json
@@ -308,7 +308,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Week successfully updated or document with specified employee id did not exist"
+                        "description": "Either the week was successfully updated or a document with the specified employee id did not exist"
                     },
                     "500": {
                         "description": "Error updating week"
@@ -316,6 +316,52 @@
                 }
             }
         },
-        "/api/shuttles/{date}": {}
+        "/api/shuttles/{date}": {
+            "get": {
+                "tags": ["shuttles"],
+                "summary": "Returns the shuttle schedule for the given date",
+                "responses": {
+                    "200": {
+                        "description": "The shuttle schedule for the given date",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ShuttleActivity.json"
+                                },
+                                "examples": {
+                                    "shuttle": {
+                                        "date": "2019-12-15T23:40:27.884+00:00",
+                                        "times": [
+                                            {
+                                                "start": "2019-12-14T05:01:00.000+00:00",
+                                                "end": "2019-12-14T07:30:00.000+00:00",
+                                                "busID": "212014918347301",
+                                                "route": "Campus",
+                                                "ID": "1576341408576",
+                                                "busName": "Van 56"
+                                            },
+                                            {
+                                                "start": "2019-12-14T05:01:00.000+00:00",
+                                                "end": "2019-12-14T07:45:00.000+00:00",
+                                                "busID": "212014918515926",
+                                                "route": "Waltham",
+                                                "ID": "1576341426603",
+                                                "busName": "Van 52"
+                                            }
+                                        ]
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Could not find shuttle schedule for the given date"
+                    },
+                    "500": {
+                        "description": "Error finding shuttle schedule"
+                    }
+                }
+            }
+        }
     }
 }
